third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-time/time-no-leads.stderr
TOML parse error at line 2, column 6
  |
2 | d = 1:32:00
  |      ^
expected newline, `#`
